google map service current location

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".service.GPSService" android:process="net.sic.appmap.service.gps" />
     </application>
 
 </manifest>
