--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,39 +12,39 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".application.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".application.BaseApplication"
         android:theme="@style/Theme.AppMap">
 
-        <activity
-            android:name="net.thangvnnc.appmap.ui.stores.directions.DirectionsActivity"
-            android:label="@string/title_activity_directions" />
-        <activity
-            android:name="net.thangvnnc.appmap.ui.stores.locations.LocationsActivity"
-            android:label="@string/title_activity_locations" />
+        <activity android:name=".ui.main.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.main.LoginActivity" />
+        <activity android:name=".ui.main.MainBaseActivity" />
 
         <activity
-            android:name="net.thangvnnc.appmap.ui.stores.locations.LocationDetailsActivity"
+            android:name=".ui.stores.directions.DirectionsActivity"
+            android:label="@string/title_activity_directions" />
+        <activity
+            android:name=".ui.stores.locations.LocationsActivity"
+            android:label="@string/title_activity_locations" />
+        <activity
+            android:name=".ui.stores.locations.LocationDetailsActivity"
             android:label="@string/title_activity_location_detail_txt_name" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="net.thangvnnc.appmap.ui.main.MainBaseActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <service
-            android:name="net.thangvnnc.appmap.service.GPSService"
+            android:name=".service.GPSService"
             android:process="net.thangvnnc.appmap.service.gps" />
     </application>
 
